--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "webkit2-greeter theme",
   "main": "src/index.js",
-  "repository": "git@github.com:bringmethecode/enkel-greeter.git",
+  "repository": "github.com/mihranmashhud/enkel-greeter.git",
   "author": "Andre Aldana <dev@ansky.sh>",
+  "contributors": [
+    "Mihran Mashhud <mihranmashhud@gmail.com>"
+  ],
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline --mode=development --colors",
-    "build": "webpack --mode=production --colors"
+    "dev": "webpack-dev-server --hot --inline --colors --env development",
+    "build": "webpack --colors --env production",
+    "build-demo": "webpack --colors --env demo"
   },
   "dependencies": {
     "svelte": "^3.0.0"
@@ -31,6 +35,7 @@
     "svg-url-loader": "^2.3.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^5.1.2"
   }
 }
